[package]
name = "tizol"
version = "0.1.0"
authors = ["Adam Harries <adam.harries@codeplay.com>"]
edition = "2018"
build = "build.rs"



[lib]
name = "tizol"
path = "src/lib.rs"

[[bin]]
name = "dumpspect"
path = "src/bin.rs"

[dependencies]
stft = { git = "https://github.com/snd/stft.git" }
image = "0.22.0"
hodges = {git = "https://github.com/ellington-project/hodges"}
scarlet = "1.0.0"
rayon = "1.1.0"
prost="0.5.0"
bytes="0.4.7"

[build-dependencies]
prost-build = { version = "0.5.0"}